--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -14,3 +14,27 @@ body {
     background-color: #F5F5DC;
 }
 
+#headerPanel {
+    background-image: url("/resources/img/header-blue-plain.jpg"); 
+    background-size: 100%;
+    height: 40px;
+    opacity: 0.7;
+    text-align: right;
+}
+
+#headerPanel_body {
+    padding: 0px;
+}
+
+#divFooter {
+    position: absolute; 
+    bottom: 0; 
+    width: 99%;
+}
+
+#graphicFooter {
+    width: 100%; 
+    height: 40px; 
+    opacity: 0.5;
+}
+
