--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -14,22 +14,54 @@ body {
     background-color: #F5F5DC;
 }
 
+#footerPanel {
+    background-image: url("/resources/img/silver-footer.jpg"); 
+    background-size: 100%;
+    height: 40px;
+    opacity: 0.7;   
+    bottom: 0%;
+    width: 98.4%;
+    position: absolute;
+}
+
+#footerPanel_body {
+    padding: 0px;
+    width: 100%;
+}
+
+#footerPanel_body table {
+    width: 100%;
+}
+
+.footerleft {
+    width: 33%;
+    text-align: left;
+}
+
+.footercenter {
+    width: 33%;
+    text-align: center;
+}
+
+.footerright {
+    width: 33%;
+    text-align: right;
+}
+
 #headerPanel {
     background-image: url("/resources/img/header-blue-plain.jpg"); 
     background-size: 100%;
     height: 40px;
-    opacity: 0.7;
-    text-align: right;
+    opacity: 0.7;    
 }
 
 #headerPanel_body {
     padding: 0px;
+    width: 100%;
 }
 
-#divFooter {
-    position: absolute; 
-    bottom: 0; 
-    width: 99%;
+#headerPanel_body table {
+    width: 100%;
 }
 
 #graphicFooter {
@@ -38,3 +70,55 @@ body {
     opacity: 0.5;
 }
 
+#headerGrid {
+    text-align: right; 
+    margin: auto 0 auto auto;
+}
+
+#headerGrid td {
+    width: 100%; 
+}
+
+#welcomeName {
+    font-weight: bolder;
+}
+
+.headerLinks {
+    color: #000 !important;
+}
+
+#logoHeader {
+    right: 50%;
+}
+
+#statusPanel {
+    padding: 0px;
+}
+
+.headerStatus {
+    padding: 0px !important;
+}
+
+#statusPanel * {
+    border-spacing: 0px !important;
+}
+
+.statusStyle {
+    padding: 0px !important;
+}
+
+#status_1_panel, #status_2_panel, #status_3_panel {
+    border-right: #999 thin solid;
+}
+
+.subStatusTitle {
+    font-weight: bolder;
+}
+
+.subStatusCol {
+    text-align: right;
+}
+
+.subStatusCol2 {
+    text-align: center;
+}
