Creating content for main submenu in Tasks tab

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -29,7 +29,7 @@ body {
     width: 100%;
 }
 
-#footerPanel_body table {
+#footerPanel_body table, .widthest {
     width: 100%;
 }
 
@@ -79,7 +79,7 @@ body {
     width: 100%; 
 }
 
-#welcomeName {
+#welcomeName, .title1 {
     font-weight: bolder;
 }
 
@@ -92,6 +92,8 @@ body {
 .panelLinks{
     padding-bottom: 0px;
     background: #CFDFFF;
+    border: #C4C0C9 solid 1px;  
+    border-top: 0px;
 }
 
 #logoHeader {
@@ -106,7 +108,7 @@ body {
     padding: 0px !important;
 }
 
-#statusPanel * {
+#statusPanel *, .removeSpacing {
     border-spacing: 0px !important;
 }
 
@@ -153,6 +155,40 @@ body {
     padding-right: 10px;
 }
 
+.middleCol {
+    vertical-align: auto; 
+}
+
+.bottomCol {
+    vertical-align: bottom; 
+}
+
 .richTabContent {
     padding-top: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+
+.appTable {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+
+.dashboardPanel, .dashboardPanelAndSpace {
+    border-bottom: #C4C0C9 solid 1px; 
+    width: 100%;
+}
+
+.dashboardPanelAndSpace {
+    margin-bottom: 5px;
+}
+
+.dashboardTitle {
+    border-top: 10px;
+}
+
+.verticalSeparator {
+    border-left: #C4C0C9 solid 1px;
+    margin-left: 5px;
 }
