Tests submenu in Tasks tab done & Adding real structures in Dashboard

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -117,11 +117,11 @@ body {
     background: #CFDFFF;
 }
 
-#status_1_panel, #status_2_panel, #status_3_panel, #status_4_panel, .regularColAndBorderLeft {
+#status_1_panel, #status_2_panel, #status_3_panel, #status_4_panel, .regularColAndBorderRight {
     border-right: #999 thin solid;
 }
 
-.regularColAndBorderLeft {
+.regularColAndBorderRight {
     padding-left: 10px; 
     padding-right: 10px;
 }
