--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -10,9 +10,26 @@ root {
     display: block;
 }
 
-body {
+html, body {
     background-color: #F5F5DC;
     margin: 5px;
+    height: 99%;
+}
+
+#wrapDiv {
+    min-height: 100%;
+}
+
+#mainDiv {
+    overflow: auto;
+    padding-bottom: 40px;
+}
+
+#footerDiv {
+    position: relative;
+    margin-top: -40px; /* negative value of footer height */
+    height: 40px;
+    clear: both;
 }
 
 #statusPanel {
@@ -22,12 +39,12 @@ body {
 #footerPanel {
     background-image: url("/resources/img/silver-footer.jpg"); 
     background-size: 100%;
-    height: 40px;
-    opacity: 0.7;   
-    bottom: 0%;
-    width: 99.76%;
+    opacity: 0.7; 
+    /*height: 40px;
+    bottom: 0;
+    width: 99.1%;
     position: relative;
-    overflow: hidden;
+    clear: both;*/
 }
 
 #footerPanel_body {
@@ -274,8 +291,8 @@ body {
 }
 
 .alertsCols {
-    padding-left: 2.5%;
-    padding-right: 2.5%;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .othersPanel {
@@ -350,7 +367,7 @@ body {
 }*/
 
 .rf-tab-cnt {
-    height: 660px !important;
+    height: 100% !important;
     border: #D4CFC7 1px solid !important;
 }
 
@@ -358,7 +375,7 @@ body {
     width: 280px;
 }
 
-.centered, .innerPanel {
+.centered, .innerPanel, .alertPanel {
     margin: 0 auto;
 }
 
@@ -389,4 +406,8 @@ body {
 .contentTab {
     padding: 0px !important;
     padding-top: 5px !important;
+}
+
+.calendar {
+    width: 150px;
 }
